Adapt changes from backend
